--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1020,12 +1020,19 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "from sklearn.tree import plot_tree\n",
-    "\n",
+    "att = [\n",
+    "    'handicapped_infants', 'water_project_cost_sharing', 'adoption_of_the_budget_resolution',\n",
+    "    'physician_fee_freeze', 'el_salvador_aid', 'religious_groups_in_schools', 'anti_satellite_test_ban',\n",
+    "    'aid_to_nicaraguan_contras', 'mx_missile', 'immigration', 'synfuels_corporation_cutback',\n",
+    "    'education_spending', 'superfund_right_to_sue', 'crime', 'duty_free_exports',\n",
+    "    'export_administration_act_south_africa'\n",
+    "]\n",
+    "trget = ['republican','democrat']\n",
     "plt.figure()\n",
-    "plot_tree(clf, filled=True)\n",
+    "plot_tree(clf, filled=True ,feature_names=att,class_names=trget)\n",
     "plt.title(\"Decision tree trained on all data features\")\n",
     "# plt.savefig('fig.svg')\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
